image spacing corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,12 +157,10 @@ footer{
     overflow:auto;
     position:relative;
     float:left;
-    margin:20px 0 25px;
+    margin:20px 5px 25px;
 }
 
-.work:nth-child(even) {
-    margin-right:40px;
-}
+
 
 .work img{
     height:161.141px;
